# TauriRoogle

./: README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
.github/workflows/: publish-to-auto-release.yml
src/: App.svelte  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/corpus/: init.rs
src/components/: SideBar.svelte
src/lib/: SearchCore.svelte
src/svgs/: ArrowBadge.svelte  GitHub.svelte  Home.svelte  InitCube.svelte
